# infrastructure

./: .envrc  .gitignore  AGENTS.md  Makefile  README_LETSENCRYPT.md  deploy.sh  docker-compose.yml  flake.nix  init-letsencrypt.sh  test-forwarding.sh
gamemcbe/: init.sh  (+1 more)
portal/: default.nix  manage.py  pyproject.toml
portal/agents/: builtin_ops.py  device_agent.py
portal/backend/: main.py
portal/backend/core/: backup_manager.py  config.py  database.py  extension_loader.py  server_base.py
portal/backend/extensions/: base.py
portal/backend/utils/: network.py
portal/public/: app.js  app.ts  eslint.config.js  index.html  package-lock.json  package.json  style.css  test_schema_renderer.html  tsconfig.json
portal/public/js/: api.js  api.ts  control_acl.js  control_acl.ts  control_api.js  control_api.ts  control_bootstrap.js  control_bootstrap.ts  control_dashboard.js  control_devices.js  control_devices.ts  control_op_renderer.js  control_op_renderer.ts  control_operations.js  control_operations.ts  control_router.js  control_router.ts  dashboard.js  dashboard.ts  portal.js  portal.ts  router.js  router.ts  schema_editor.js  schema_editor.ts  schema_renderer.js  schema_renderer.ts  ui.js  ui.ts
portal/servers/: __init__.py
portal/servers/control_plane/: __init__.py  api.py  auth.py  bridge.py  core.py  dispatcher.py  main.py  manager_cli.py  models.py  sse.py  ws.py
portal/servers/obtainium_repo/: __init__.py  compiler.py  main.py  manager_cli.py  models.py  utils.py
portal/tests/: .gitignore  config.test.json  control_split.spec.js  dashboard.spec.js  device_agent_integration.spec.js  package-lock.json  package.json  playwright.config.js  portal.spec.js  schema_renderer.spec.js
(+60 files in other folders)
