[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "portal"
version = "0.1.0"
description = "Android Device Provisioning Portal"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "python-multipart",
    "psycopg2",
    "jsonschema",
    "websockets"
]

[project.scripts]
portal-server = "backend.main:main"
portal-manage = "manage:main"
portal-control-bridge = "servers.control_plane.bridge:main"
portal-device-agent = "agents.device_agent:main"

[tool.setuptools]
packages = ["backend", "backend.core", "backend.utils", "backend.extensions", "servers", "servers.obtainium_repo", "servers.storage_manager", "servers.control_plane", "agents"]
py-modules = ["manage"]

[tool.setuptools.package-data]
"*" = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*", "**/*.pyc"]
